--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -212,7 +212,12 @@ nav .logo img{
      background-color: rgb(255, 255, 255);
      /* transform: rotate(270deg);
      transform-origin: top left; */
-  }
+ }
+ 
+ nav{
+     box-shadow: 1px 1px 3px 10px rgba(219, 202, 202, 0.1);
+ }
+
   .navbar-nav ul{
       display: block;
       text-align: center;
