--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -136,7 +136,6 @@ nav .logo img{
     position: relative;
     height: 400px;
     border-radius: 20px;
-    margin: 0 15px !important;
     background-image: url('/assets/images/video-placeholder.png');
     background-position: center;
     background-repeat: no-repeat;
@@ -152,6 +151,25 @@ nav .logo img{
 .video img:last-child{
     border-radius: 20px;
     object-fit: cover;
+}
+.grid{
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+}
+.first-grid{
+    grid-column: 1/7;
+    grid-row: 1/2;
+}
+.second-grid{
+    grid-column: 1/7;
+    grid-row: 2/3;
+}
+.third-grid{
+    grid-row: 1/3;
+    grid-column: 7/13;
+}
+.grid img{
+    width: 100%;
 }
 @media screen and (max-width:1160px){
     .banner h1{
@@ -245,4 +263,21 @@ nav .logo img{
   .navbar-nav.show + .nav-toggle span:nth-of-type(odd){
       transform: translateX(-50px);
   }
+}
+
+@media screen and (max-width:600px){
+    .banner h1 span{
+        line-height: 30px;
+    }
+    .banner h1{
+        font-size: 30px;
+    }
+    .video-play h3{
+        font-size: 20px;
+        line-height: 18px;
+    }
+    .video-play p{
+        font-size: 14px;
+        line-height: 15px;
+    }
 }
