created grid for home page, and added images

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -198,7 +198,7 @@ nav .logo img{
         text-align: center;
     }
     .banner aside img{
-        transform: scale(1);
+        /* transform: scale(1); */
         height: 100%;
     }
 }
