--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -167,6 +167,7 @@ nav .logo img{
 .third-grid{
     grid-row: 1/3;
     grid-column: 7/13;
+    background-color: #ecebe7;
 }
 .grid img{
     width: 100%;
