--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -159,10 +159,12 @@ nav .logo img{
 .first-grid{
     grid-column: 1/7;
     grid-row: 1/2;
+    background-color: #7c776c;
 }
 .second-grid{
     grid-column: 1/7;
     grid-row: 2/3;
+    background-color: #262626;
 }
 .third-grid{
     grid-row: 1/3;
