--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -174,6 +174,22 @@ nav .logo img{
 .grid img{
     width: 100%;
 }
+.shop-btn{
+    text-align: center;
+    margin: 10px 0;
+    /* border-bottom:  1px solid #EE6624; */
+   position: relative;
+}
+.shop-btn::after{
+    transform: translate(8%);
+    content: '';
+    width: 90%;
+    height: 1.5%;
+    background-color: #EE6624;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+}
 @media screen and (max-width:1160px){
     .banner h1{
         font-size: 50px;
