--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -177,20 +177,10 @@ nav .logo img{
 .shop-btn{
     text-align: center;
     margin: 10px 0;
-    /* border-bottom:  1px solid #EE6624; */
-   position: relative;
-   overflow-x: hidden;
+    border-bottom:  1px solid #EE6624;
+  
 }
-.shop-btn::after{
-    transform: translate(8%);
-    content: '';
-    width: 90%;
-    height: 1.5%;
-    background-color: #EE6624;
-    bottom: 0;
-    left: 0;
-    position: absolute;
-}
+
 @media screen and (max-width:1160px){
     .banner h1{
         font-size: 50px;
