--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -5,6 +5,12 @@
     font-family: 'Poppins',sans-serif;
     list-style: none;
 }
+body{
+    overflow-x: hidden;
+}
+html{
+    scroll-behavior: smooth;
+}
 .container{
     padding: 0 50px;
 }
