--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -7,6 +7,26 @@
 }
 body{
     overflow-x: hidden;
+    /* position: relative; */
+}
+header{
+    z-index: 10;
+    position: relative;
+    background-color: #fff;
+}
+.toggle{
+   position: relative;
+   overflow-y: hidden;
+}
+.toggle::after{
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    background-color: #d0b6b691;
 }
 html{
     scroll-behavior: smooth;
@@ -395,7 +415,7 @@ footer a{
  }
  
  nav{
-     box-shadow: 1px 1px 3px 10px rgba(219, 202, 202, 0.1);
+     box-shadow: 1px 1px 3px 10px rgba(108, 91, 91, 0.1);
  }
 
   .navbar-nav ul{
@@ -418,7 +438,7 @@ footer a{
   .show{
       height: auto;
       overflow: auto;
-      z-index: 1;
+      z-index: 5;
       margin: 15px 0;
       /* transform: rotate(0); */
   }
@@ -433,7 +453,7 @@ footer a{
     margin: 15px 0;
 }
 .about-banner h1{
-    font-size: 40px;
+    font-size: 36px !important;
 }
 }
 
