--- a/assets/styles/store.css
+++ b/assets/styles/store.css
@@ -27,6 +27,68 @@
 .slick-dots li{
     margin: 0 10px;
 }
+ul{
+    width: 900px;
+    margin: 0 auto;
+}
+.store-li{
+    border: 1px solid #EE6624;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.li-main-div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.li-main-div aside{
+    width: 100px;
+    height: 100px;
+}
+.li-main-div img{
+    border-radius: 5px;
+    width: 100%;
+}
+.li-main-div article{
+    margin: 0 10px;
+}
+.li-main-div article div{
+    margin: 5px 0;
+}
+.li-main-div p{
+    color: #C4C4C4;
+}
+.step{
+  display: inline-block;
+  border: 1px solid #000;
+  padding: 0 5px;
+  margin: 0 5px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.rating{
+    width: 25px;
+    height: 25px;
+    margin: 5px 0;
+    cursor: pointer;
+}
+.rating img{
+    width: 100%;
+}
+.buy{
+    text-decoration: none;
+    background-color: #EE6624;
+    color: #fff;
+    padding: 10px 15px;
+    display: inline-block;
+}
+.purchase-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 @media screen and (max-width:542px){
 .store-slide{
     margin: 20px 0;
