--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -207,6 +207,10 @@ nav .logo img{
     border-bottom:  1px solid #EE6624;
   
 }
+.shop-btn aside img{
+    width: 100%;
+    height: 100%;
+}
 main+.shop-btn{
     border: none;
 }
@@ -458,6 +462,9 @@ footer a{
 }
 
 @media screen and (max-width:600px){
+    .shop-btn aside{
+        height: 200px;
+    }
     .banner h1 span{
         line-height: 30px;
     }
