completed signup page

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -516,5 +516,9 @@ footer a{
     footer{
         padding: 20px 5px;
     }
+    .contain{
+        width: auto;
+        box-shadow: none;
+    }
 }
 
