--- a/assets/styles/signup.css
+++ b/assets/styles/signup.css
@@ -1,5 +1,5 @@
 :root{
-    --success-color: #2ecc71;
+    --success-color: #32e27c;
     --error-color : #e74c3c;
 }
 *{
@@ -10,13 +10,14 @@
 .contain{
     background: #fff;
     border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    /* box-shadow: 0 2px 10px rgba(0,0,0,0.3); */
     width: 400px;
     margin: 30px auto;
 }
 h2{
     text-align: center;
     margin: 0 0 20px;
+    font-weight: 500;
 }
 .form{
     padding: 30px 40px;
@@ -37,6 +38,7 @@ h2{
     width: 100%;
     padding: 10px;
     font-size: 14px;
+    background-color:#EBEBEB;
 }
 .form-control input:focus{
     outline: 0;
@@ -59,8 +61,8 @@ h2{
 
 .form button{
     cursor: pointer;
-    background-color: #3498db;
-    border: 2px solid #3498db;
+    background-color: #EE6624;
+    border: 2px solid #EE6624;
     border-radius: 4px;
     display: block;
     color:#fff;
